css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Roboto", sans-serif;
    padding: 1rem 3rem;
}

input, select, textarea, button {
    font: inherit
}

h1 {
    font-size: 2rem;
    margin: 2rem auto;
    text-align: center;
}

section {
    width: 80%;
    min-width: fit-content;
    max-width: 550px;
    height: fit-content;
    display: block;
    margin-inline: auto;
    padding: 1rem;

    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    border-radius: 5px;
}

label, input:not([type="radio"]), select, fieldset, textarea {
    display: inline-block;
    width: 100%;
    border-radius: 5px;
    padding: 0.2rem;
}

:is(input, textarea)::placeholder {
    font-size: 0.8rem;
}

input, select, fieldset, textarea {
    margin-bottom: 1rem;
}

label {
    font-size: 1.2rem;
}

fieldset input {
    margin-inline: 0.2rem;
    width: 1;
}

fieldset label {
    margin-left: 0.2rem;
    max-width: 30%;
}

:is(input, select, textarea):focus {
    border: none;
    outline: none;
    box-shadow: 2px 2px 2px 1px hsl(120, 0%, 40%);
}

:is(input, textarea, select):required:invalid{
    border: 1px solid red;

}

:is(input, textarea, select):valid {
    border: 1px solid forestgreen;
}

legend {
    margin: 0 auto;
}


input[type="radio"] {
    appearance: none;
}

input[type="radio"] {
    width: 15px;
    height: 15px;
    border-radius: 50%;
    border: 1px solid black;
    vertical-align: -16px;
    cursor: pointer;
}

input[type="radio"]::before {
    display: block;
    content: "";
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: green;
    transform: translate(1.4px, 1.4px) scale(0);
    transform-origin: center;
    transition: all 0.2s ease-in;
}

input[type="radio"]:checked::before {
    transform: translate(1.4px, 1.4px) scale(1) ;
    transition: all 0.3s cubic-bezier(0.25, 0.25, 0.56, 2);
    color: green;
} 

input[type="radio"]:checked+label {
    color: green;
}

button {
    width: 100%;
    margin: 0.7rem auto;

    padding: 0.7rem;

    background-color: green;
    color: whitesmoke;
    border: none;
    border-radius: 5px;
    box-shadow: 2px 2px 2px;

    transition: 0.4s;
}

button:hover {
    background-color: darkblue;
}

